allow arbritary additional consumer config

--- a/python/observation-publisher/conf/environment/example-override.yaml
+++ b/python/observation-publisher/conf/environment/example-override.yaml
@@ -29,5 +29,6 @@ consumer:
     topic: "test-topic"
     bootstrap_servers: "localhost:9092"
     group_id: "test-group"
-    auto_offset_reset: "latest"
     batch_size: 100
+    additional_consumer_config:
+      "auto.offset.reset": "latest"
