--- a/python/observation-publisher/conf/environment/example-override.yaml
+++ b/python/observation-publisher/conf/environment/example-override.yaml
@@ -1,35 +1,47 @@
 model:
   id: "test-model"
+  # Supported model types:
+  #  - BINARY_CLASSIFICATION
+  #  - MULTICLASS_CLASSIFICATION
+  #  - REGRESSION
+  # - RANKING
   type: "BINARY_CLASSIFICATION"
   version: "0.1.0"
   schema:
-    prediction_columns:
-      - "accept"
-      - "label"
-    prediction_column_types:
-      - "BOOLEAN"
-      - "STRING"
+    # Data types for features and prediction columns. Supported types are:
+    #  - INT64
+    #  - FLOAT64
+    #  - STRING
+    column_types:
+      accept: "BOOLEAN"
+      label: "STRING"
+      distance: "INT64"
+      transaction: "FLOAT64"
+    # Prediction result
     prediction_score_column: "accept"
-    prediction_label_column: "label"
-    prediction_id_column: "prediction_id"
+    # Column name to be used for timestamp.
     timestamp_column: "request_timestamp"
-    feature_columns:
-      - "distance"
-      - "transaction"
-    feature_column_types:
-      - "INT64"
-      - "FLOAT64"
+    # Optional: User defined labels to group predictions
+    prediction_label_column: "label"
+    # Optional: Column name to be used for prediction id.
+    # If not provided, it's assumed to be prediction_id.
+    prediction_id_column: "prediction_id"
 observability_backend:
+  # Supported backend types:
+  #  - ARIZE
   type: "ARIZE"
   arize_config:
     api_key: "SECRET_API_KEY"
     space_key: "SECRET_SPACE_KEY"
 consumer:
+  # Supported consumer types:
+  #  - KAFKA
   type: "KAFKA"
   kafka_config:
     topic: "test-topic"
     bootstrap_servers: "localhost:9092"
     group_id: "test-group"
     batch_size: 100
+    # Additional consumer configuration to be passed to KafkaConsumer.
     additional_consumer_config:
       "auto.offset.reset": "latest"
