handle multiclass classification

--- a/python/observation-publisher/Dockerfile
+++ b/python/observation-publisher/Dockerfile
@@ -2,10 +2,13 @@ FROM python:3.10
 
 WORKDIR /mlobs
 
-COPY requirements.txt .
+COPY observation-publisher/requirements.txt .
+COPY sdk/ ./sdk
+ENV SDK_PATH=/mlobs/sdk
 RUN pip install -r requirements.txt
 RUN rm requirements.txt
-COPY conf/ ./conf
-COPY publisher/ ./publisher
+RUN rm -rf sdk
+COPY observation-publisher/conf/ ./conf
+COPY observation-publisher/publisher/ ./publisher
 
 ENTRYPOINT ["python", "-m", "publisher"]
