--- a/python/observation-publisher/Makefile
+++ b/python/observation-publisher/Makefile
@@ -1,16 +1,14 @@
-IMAGE_NAME = "observation-publisher"
-IMAGE_TAG = "dev"
 ENVIRONMENT_CONFIG = "example-override"
+
+.PHONY: setup
+setup:
+	@echo "Setting up environment..."
+	@pip install -r requirements.txt --use-pep517
 
 .PHONY: test
 test:
 	@echo "Running tests..."
 	@python -m pytest
-
-.PHONY: image
-image:
-	@echo "Building image..."
-	@docker build -t $(IMAGE_NAME):$(IMAGE_TAG) .
 
 .PHONY: run
 run:
