--- a/python/observation-publisher/requirements.txt
+++ b/python/observation-publisher/requirements.txt
@@ -1,7 +1,7 @@
 confluent-kafka>=2.3.0
 caraml-upi-protos>=1.0.0
-arize==7.6.*
+arize==7.7.*
 hydra-core>=1.3.0
 pandas>=1.0.0
 
-file:${SDK_PATH}
+file:../sdk
