--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -69,33 +69,33 @@ jobs:
         working-directory: ./python/batch-predictor
         run: make unit-test
 
-  test-pyfunc-server:
-    runs-on: ubuntu-latest
-    env:
-      PIPENV_DEFAULT_PYTHON_VERSION: 3.10
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.10
-      - uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-3.10-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-3.10-
-      - uses: actions/cache@v3
-        with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-python-3.10-pipenv-pyfunc-server
-      - name: Install dependencies
-        working-directory: ./python/pyfunc-server
-        run: |
-          pip install pipenv==2023.7.23
-          make setup
-      - name: Run pyfunc-server test
-        working-directory: ./python/pyfunc-server
-        run: make test
+  # test-pyfunc-server:
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     PIPENV_DEFAULT_PYTHON_VERSION: 3.10
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-python@v4
+  #       with:
+  #         python-version: 3.10
+  #     - uses: actions/cache@v3
+  #       with:
+  #         path: ~/.cache/pip
+  #         key: ${{ runner.os }}-pip-3.10-${{ hashFiles('**/requirements.txt') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-pip-3.10-
+  #     - uses: actions/cache@v3
+  #       with:
+  #         path: ~/.local/share/virtualenvs
+  #         key: ${{ runner.os }}-python-3.10-pipenv-pyfunc-server
+  #     - name: Install dependencies
+  #       working-directory: ./python/pyfunc-server
+  #       run: |
+  #         pip install pipenv==2023.7.23
+  #         make setup
+  #     - name: Run pyfunc-server test
+  #       working-directory: ./python/pyfunc-server
+  #       run: make test
 
   test-python-sdk:
     runs-on: ubuntu-latest
@@ -275,22 +275,22 @@ jobs:
           path: merlin-pyspark-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  build-pyfunc-server:
-    runs-on: ubuntu-latest
-    needs:
-      - create-version
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build Pyfunc Server Base Docker
-        run: docker build -t merlin-pyfunc-base:${{ needs.create-version.outputs.version }} -f python/pyfunc-server/docker/base.Dockerfile python
-      - name: Save Pyfunc Server Base Docker
-        run: docker image save --output merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar merlin-pyfunc-base:${{ needs.create-version.outputs.version }}
-      - name: Publish Pyfunc Server Base Docker Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
-          path: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
-          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+  # build-pyfunc-server:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - create-version
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Build Pyfunc Server Base Docker
+  #       run: docker build -t merlin-pyfunc-base:${{ needs.create-version.outputs.version }} -f python/pyfunc-server/docker/base.Dockerfile python
+  #     - name: Save Pyfunc Server Base Docker
+  #       run: docker image save --output merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar merlin-pyfunc-base:${{ needs.create-version.outputs.version }}
+  #     - name: Publish Pyfunc Server Base Docker Artifact
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
+  #         path: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
+  #         retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-transformer:
     runs-on: ubuntu-latest
@@ -434,7 +434,7 @@ jobs:
       # - e2e-test
       - test-api
       - test-python-sdk
-      - test-pyfunc-server
+      # - test-pyfunc-server
       - test-batch-predictor
     with:
       version: ${{ needs.create-version.outputs.version }}
