--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,12 +126,8 @@ jobs:
           docker tag merlin-pyspark-base-py${{ matrix.python-version }}:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
 
-  publish-pyfunc:
+  publish-pyfunc-base:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["38", "39", "310"]
     steps:
       - name: Log in to the Container registry
         uses: docker/login-action@v1
@@ -142,14 +138,14 @@ jobs:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyfunc-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
+          name: merlin-pyfunc-base.${{ inputs.version }}.tar
       - name: Retag and Push Docker Image
         env:
           CONTAINER_REGISTRY: ${{ env.DOCKER_REGISTRY }}/${{ github.repository }}
         run: |
-          IMAGE_TAG="${{ env.CONTAINER_REGISTRY }}/merlin-pyfunc-base-py${{ matrix.python-version }}:${{ inputs.version }}"
-          docker image load --input merlin-pyfunc-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
-          docker tag merlin-pyfunc-base-py${{ matrix.python-version }}:${{ inputs.version }} ${IMAGE_TAG}
+          IMAGE_TAG="${{ env.CONTAINER_REGISTRY }}/merlin-pyfunc-base:${{ inputs.version }}"
+          docker image load --input merlin-pyfunc-base.${{ inputs.version }}.tar
+          docker tag merlin-pyfunc-base:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
 
   publish-inference-logger:
