--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -22,14 +22,14 @@ RUN gsutil cp ${MODEL_DEPENDENCIES_URL} conda.yaml
 RUN sed -i 's/mlflow\(\s*==\s*[^ ]*\)\{0,1\}/mlflow==1.26.1/g' conda.yaml
 RUN conda env create --name merlin-model --file conda.yaml
 
-COPY pyfunc-server /pyfunc-server
-COPY sdk /sdk
-ENV SDK_PATH=/sdk
+# COPY pyfunc-server /pyfunc-server
+# COPY sdk /sdk
+# ENV SDK_PATH=/sdk
 
-RUN /bin/bash -c ". activate merlin-model && pip install -r /pyfunc-server/requirements.txt"
+# RUN /bin/bash -c ". activate merlin-model && pip install -r /pyfunc-server/requirements.txt"
 
-ARG MODEL_ARTIFACTS_URL
-RUN gsutil -m cp -r ${MODEL_ARTIFACTS_URL} .
-RUN /bin/bash -c ". activate merlin-model && python -m pyfuncserver --model_dir model --dry_run"
+# ARG MODEL_ARTIFACTS_URL
+# RUN gsutil -m cp -r ${MODEL_ARTIFACTS_URL} .
+# RUN /bin/bash -c ". activate merlin-model && python -m pyfuncserver --model_dir model --dry_run"
 
-CMD ["/bin/bash", "/pyfunc-server/run.sh"]
+# CMD ["/bin/bash", "/pyfunc-server/run.sh"]
