Add WORKDIR after copy

--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -26,6 +26,7 @@ COPY pyfunc-server /pyfunc-server
 COPY sdk /sdk
 ENV SDK_PATH=/sdk
 
+WORKDIR /pyfunc-server
 RUN /bin/bash -c ". activate merlin-model && pip install -r /pyfunc-server/requirements.txt"
 
 ARG MODEL_ARTIFACTS_URL
