--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -15,7 +15,7 @@
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-# RUN if [ ! -z "$GOOGLE_APPLICATION_CREDENTIALS" ]; then gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}; fi
+RUN if [ ! -z "$GOOGLE_APPLICATION_CREDENTIALS" ]; then gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}; fi
 
 # ARG MODEL_DEPENDENCIES_URL
 # RUN gsutil cp ${MODEL_DEPENDENCIES_URL} conda.yaml
@@ -31,8 +31,10 @@ RUN pwd
 RUN ls -lah
 # RUN /bin/bash -c ". activate merlin-model && pip install -r /pyfunc-server/requirements.txt"
 
-# ARG MODEL_ARTIFACTS_URL
-# RUN gsutil -m cp -r ${MODEL_ARTIFACTS_URL} .
+ARG MODEL_ARTIFACTS_URL
+RUN gsutil -m cp -r ${MODEL_ARTIFACTS_URL} .
+RUN ls -lah
+RUN ls -lah model
 # RUN /bin/bash -c ". activate merlin-model && python -m pyfuncserver --model_dir model --dry_run"
 
 # CMD ["/bin/bash", "/pyfunc-server/run.sh"]
