Set default value of ARG GOOGLE_APPLICATION_CREDENTIALS to empty string

--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -15,7 +15,7 @@
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-ARG GOOGLE_APPLICATION_CREDENTIALS
+ARG GOOGLE_APPLICATION_CREDENTIALS=""
 RUN if [ ! -z "$GOOGLE_APPLICATION_CREDENTIALS" ]; \
     then gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}; \
     else echo "GOOGLE_APPLICATION_CREDENTIALS is not set. Skipping gcloud auth command."; \
