Setting build arg GOOGLE_APPLICATION_CREDENTIALS to env to ensure the env value is always defined hence the next run will not invalidated

--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -16,7 +16,8 @@ ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
 ARG GOOGLE_APPLICATION_CREDENTIALS=""
-RUN if [ ! -z "$GOOGLE_APPLICATION_CREDENTIALS" ]; \
+ENV GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
+RUN if [ ! -z "${GOOGLE_APPLICATION_CREDENTIALS}" ]; \
     then gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}; \
     else echo "GOOGLE_APPLICATION_CREDENTIALS is not set. Skipping gcloud auth command."; \
     fi
