--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -15,11 +15,12 @@
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-ARG GOOGLE_APPLICATION_CREDENTIALS=""
-ENV GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
+ARG GOOGLE_APPLICATION_CREDENTIALS
+# ARG GOOGLE_APPLICATION_CREDENTIALS=""
+# ENV GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
 RUN if [ ! -z "${GOOGLE_APPLICATION_CREDENTIALS}" ]; \
-    then gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}; \
-    else echo "GOOGLE_APPLICATION_CREDENTIALS is not set. Skipping gcloud auth command."; \
+    then gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS} > gcloud-auth.txt; \
+    else echo "GOOGLE_APPLICATION_CREDENTIALS is not set. Skipping gcloud auth command." > gcloud-auth.txt; \
     fi
 
 ARG MODEL_DEPENDENCIES_URL
