Update imageBuilder resources in values-e2e.yaml

--- a/scripts/e2e/values-e2e.yaml
+++ b/scripts/e2e/values-e2e.yaml
@@ -45,7 +45,7 @@ imageBuilder:
     DockerRegistry: "dockerRegistry"
     BuildTimeout: "10m"
     KanikoImage: "gcr.io/kaniko-project/executor:v1.6.0"
-    Resources:
+    DefaultResourceRequest:
       Requests:
         CPU: "1"
         Memory: 512Mi
