--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -239,8 +239,9 @@ jobs:
         ports:
           - 5432:5432
     needs:
-      - build-ui
       - create-version
+      - build-ui
+      - test-api
     steps:
       - uses: actions/checkout@v2
       - name: Download UI Dist
@@ -263,6 +264,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - create-version
+      - test-batch-predictor
     env:
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyspark-base:${{ needs.create-version.outputs.version }}"
     steps:
@@ -282,6 +284,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - create-version
+      - test-pyfunc-server
     env:
       DOCKER_REGISTRY: ghcr.io
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyfunc-base:${{ needs.create-version.outputs.version }}"
@@ -440,7 +443,6 @@ jobs:
       # - e2e-test
       - test-api
       - test-python-sdk
-      - test-batch-predictor
     with:
       version: ${{ needs.create-version.outputs.version }}
     secrets:
