--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -260,7 +260,7 @@ jobs:
           path: merlin.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  build-push-batch-predictor-base:
+  build-batch-predictor-base:
     runs-on: ubuntu-latest
     needs:
       - create-version
@@ -269,18 +269,27 @@ jobs:
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyspark-base:${{ needs.create-version.outputs.version }}"
     steps:
       - uses: actions/checkout@v2
+      - name: Build Batch Predictor Base Docker
+        run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/batch-predictor/docker/base.Dockerfile python
+      - name: Save Batch Predictor Base Docker
+        run: docker image save --output merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar ${DOCKER_IMAGE_TAG}
+      - name: Publish Batch Predictor Base Docker Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+      # TODO(arief): Remove publishing docker image to GHCR after local testing done.
       - name: Log in to the Container registry
         uses: docker/login-action@v1
         with:
           registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build Batch Predictor Base Docker
-        run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/batch-predictor/docker/base.Dockerfile python
       - name: Push Batch Predictor Base Docker
         run: docker push ${{ env.DOCKER_IMAGE_TAG }}
 
-  build-push-pyfunc-server-base:
+  build-pyfunc-server-base:
     runs-on: ubuntu-latest
     needs:
       - create-version
@@ -290,14 +299,23 @@ jobs:
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyfunc-base:${{ needs.create-version.outputs.version }}"
     steps:
       - uses: actions/checkout@v2
+      - name: Build Pyfunc Server Base Docker
+        run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/pyfunc-server/docker/base.Dockerfile python
+      - name: Save Pyfunc Server Base Docker
+        run: docker image save --output merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar ${DOCKER_IMAGE_TAG}
+      - name: Publish Pyfunc Server Base Docker Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+      # TODO(arief): Remove publishing docker image to GHCR after local testing done.
       - name: Log in to the Container registry
         uses: docker/login-action@v1
         with:
           registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build Pyfunc Server Base Docker
-        run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/pyfunc-server/docker/base.Dockerfile python
       - name: Push Pyfunc Server Base Docker
         run: docker push ${{ env.DOCKER_IMAGE_TAG }}
 
@@ -440,9 +458,12 @@ jobs:
     uses: ./.github/workflows/release.yml
     needs:
       - create-version
-      # - e2e-test
+      - build-batch-predictor-base
+      - build-pyfunc-server-base
       - test-api
       - test-python-sdk
+      # TODO(arief): Uncomment this after local testing done.
+      # - e2e-test
     with:
       version: ${{ needs.create-version.outputs.version }}
     secrets:
